# claude-code-python-workspace

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/agents/: implementer.md  plan.md  pr.md  spec.md
.claude/commands/: ci-watch.md  commit.md  setup-secrets.md  test.md
.claude/skills/: deploy.md  linear-dev.md  review.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  deploy.yml  security.yml
docs/: BRANCHING.md  CLOUD_RUN.md  SECRETS.md  STANDARDS.md  WORKFLOW.md
scripts/: sync-to-project.sh
