# ============================================================
# pyproject.toml — single source of truth for this project
#
# Adapt:
#   - Replace placeholders in [project] section
#   - Adjust dependencies as needed
#   - Remove dependency manager sections you don't use
# ============================================================

[project]
# TODO: replace with your project details
name = "my-app"                          # your package name
version = "0.1.0"
description = "TODO: describe your app"
authors = [
    { name = "TODO: Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# ── Runtime dependencies ─────────────────────────────────────
# Adjust versions to your needs. Unpin in dev, pin in production lock files.
dependencies = [
    # Claude API
    "anthropic>=0.40.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Environment / config
    "python-dotenv>=1.0.1",

    # HTTP client (for external API calls)
    "httpx>=0.28.0",
]

# ── Optional dependency groups ────────────────────────────────
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",            # for FastAPI TestClient async support

    # Type checking
    "mypy>=1.13.0",

    # Linting & formatting
    "ruff>=0.8.0",

    # Security
    "bandit[sarif]>=1.8.0",
    "pip-audit>=2.8.0",
    "detect-secrets>=1.5.0",

    # Pre-commit hooks
    "pre-commit>=4.0.0",
]


# ── Build system ──────────────────────────────────────────────
[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]


# ── Ruff (linter + formatter) ─────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # allow assert in tests
    "S105",   # allow hardcoded passwords in tests
    "S106",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


# ── mypy (type checker) ───────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

# Third-party libraries without stubs — add as needed
[[tool.mypy.overrides]]
module = [
    # "some_untyped_lib.*",
]
ignore_missing_imports = true


# ── pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--tb=short",
    "-q",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80


# ── Bandit (SAST) ─────────────────────────────────────────────
[tool.bandit]
targets = ["src"]
severity = "medium"
confidence = "medium"
skips = [
    "B101",  # assert_used — acceptable in tests
]
